--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,6 @@
         "vlucas/phpdotenv": "^2.0",
         "symfony/console": "^2.7",
         "vlucas/spot2": "^2.1",
-        "tuupola/slim-jwt-auth": "3.0.0-rc.3",
         "tuupola/slim-basic-auth": "3.0.0-rc.3",
         "league/fractal": "^0.13.0",
         "paragonie/random_compat": "^1.2",
@@ -34,7 +33,7 @@
         "tuupola/base62": "^0.8.0",
         "tuupola/dbal-psr3-logger": "^0.1.0",
         "crell/api-problem": "^2.0",
-        "firebase/php-jwt": "^4.0"
+        "tuupola/branca-middleware": "^0.3.1"
     },
     "autoload": {
         "psr-4": {
@@ -47,7 +46,7 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^2.5",
-        "overtrue/phplint": "^0.2.0",
+        "overtrue/phplint": "^1.0",
         "phpunit/phpunit": "^5.7"
     },
     "scripts": {
