--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "tuupola/base62": "^0.8.0",
         "tuupola/dbal-psr3-logger": "^0.1.0",
         "crell/api-problem": "^2.0",
-        "tuupola/branca-middleware": "^0.3.1"
+        "tuupola/branca-middleware": "^0.3.1",
+        "tuupola/server-timing-middleware": "^0.6.0"
     },
     "autoload": {
         "psr-4": {
